opam-version: "2.0"
maintainer:   "martin@lucina.net"
homepage:     "https://github.com/mirage/mirage-block-solo5"
dev-repo:     "git+https://github.com/mirage/mirage-block-solo5.git"
bug-reports:  "https://github.com/mirage/mirage-block-solo5/issues"
doc:           "https://mirage.github.io/mirage-block-solo5/"
license:       "ISC"
authors:      ["Dan Williams" "Martin Lucina"]
tags: [
  "org:mirage"
]

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune"  {>= "1.0"}
  "lwt" {>= "2.4.3"}
  "cstruct" {>= "6.0.0"}
  "mirage-block" {>= "2.0.0"}
  "mirage-solo5" {>= "0.7.0"}
  "fmt" {>= "0.8.7"}
]
synopsis: "Solo5 implementation of MirageOS block interface"
description:
  "This library implements the MirageOS block interface for Solo5 targets."
pin-depends: [
  [ "mirage-solo5.dev" "git+https://github.com/mirage/mirage-solo5.git#38ab99739b93af6e63d3ea31106572f361131fd1" ]
  [ "mirage-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
]
